--- a/stats/stats-server/pom.xml
+++ b/stats/stats-server/pom.xml
@@ -68,6 +68,12 @@
             <groupId>ru.practicum</groupId>
             <artifactId>stats-dto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>main-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
