--- a/main-service/pom.xml
+++ b/main-service/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stats-client</artifactId>
-            <version>${project.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -123,6 +123,16 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+<!--
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ru.practicum.main.EwmMainService</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
+            </plugin>-->
+
         </plugins>
     </build>
 
